<resources>
    <string name="app_name">Popular Movie App</string>
    <string name="movie_poster">Movie Poster</string>

    <!--    Put your Api Key here   -->
    <string name="mv_db_api">Your Api Key</string>
    

    <!--    Menu Text   -->
    <string name="menu_title">Sort By</string>
    <string name="menu_subtitle_rate">Top Rated</string>
    <string name="menu_subtitle_popularity">Popularity</string>

    <!--    Movie Detail Text   -->
    <string name="movie_detail_default_title">Default Title</string>
    <string name="movie_detail_default_release_date">Default Release Date</string>
    <string name="movie_detail_default_rate">Default Rate</string>
    <string name="movie_detail_default_synopsis">Default Synopsis</string>

</resources>
